assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');

/* Global Styles ------------------------------------------------- */

body {
    font-family: 'Roboto', sans-serif;
    color: #e2e2e2;
    overflow: overlay;
}

.background {
    padding-top: 20px;
    background: repeating-linear-gradient(135deg, rgb(40, 40, 40) 6px, rgb(30, 30, 30) 12px);
    min-height: calc(100vh - 6rem);
}

section {
    margin: 3.5rem 0 2.5rem 0;
    padding-bottom: 3rem;
}

p {
    padding: 0.5rem 0;
    margin-bottom: 0;
}

.status {
    position: absolute;
    margin-bottom: 1px;
    padding-top: 4px;
    right: 50px;
    width: 100px;
    height: 25px;
    border-radius: 10px;
    text-align: center;
    font-size: 0.9rem;
    border: 1px solid black;
}

.complete {
    background-color: rgb(33, 150, 50);
}

.update {
    background-color: rgb(148, 134, 5);
}

.development {
    background-color: rgb(230, 90, 10);
}

.inception {
    background-color: rgb(30, 140, 170);
}

.live {
    background-color: rgb(200, 40, 120);
}

.square {
    width: 100%;
    height: 50px;
    border: 1px solid greenyellow;
    background-color: hotpink;
}

#introduction {
    text-align: center;
    vertical-align: middle;
    margin-top: 10rem;
    margin-bottom: 25rem;
}

.arrow {
    margin-top: 20px;
}

.fa-angle-double-down {
    font-size: 40px;
}

.fa-angle-double-down:hover {
    color: rgb(200, 40, 120);
}


/* Navigation ---------------------------------------------------- */

.list-group-item {
    font-size: 0.9rem;
    padding: 6px 16px;
    color: #e2e2e2;
}

.offcanvas-body {
    overflow-y: visible;
}

.navbar-dark .navbar-toggler {
    color: none;
    padding: 0.25rem;
    border: none;
}

.navbar-toggler:focus {
    box-shadow: none;
}

.navbar,
footer {
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
}

.nav-link {
    padding: 8px 0 8px 5px;
}

.navbar-expand-lg .navbar-nav .nav-link {
    margin-right: 5px;
    padding-right: 0.6rem;
    padding-left: 0.6rem;
}

.nav-link:hover {
    background-color: rgba(80, 80, 80, 0.8);
    border-radius: 10px;
}

.btn {
    position: relative;
    bottom: 2px;
    margin-left: 15px;
}

.btn-group-sm>.btn,
.btn-sm {
    margin-left: 15px;
    padding: 0.1rem 0.4rem;
    font-size: .75rem;
    border-radius: 0.2rem;
}

.dropdown-menu {
    background: repeating-linear-gradient(135deg, rgb(40, 40, 40) 6px, rgb(30, 30, 30) 12px);
    border: 1px solid rgb(70, 70, 70);
}

.dropdown-item {
    color: #e2e2e2;
}

.settings {
    color: #e2e2e2;
    margin-left: 10px;
    padding: 4px;
}

a {
    color: #d63384;
    text-decoration: none;
}


/* Headings ------------------------------------------------------ */

h2 {
    font-size: 1.4rem;
    margin: 4px 4px 4px 0;
}

h3 {
    font-size: 1.3rem;
}

h4 {
    font-size: 1.2rem;
    color: rgb(40, 132, 218);
}

hr {
    margin: 0;
    margin-bottom: 10px;
    opacity: 0.5;
}

.highlight {
    color: rgb(200, 40, 120);
}


/* Progress Bars ------------------------------------------------- */

.progress {
    position: relative;
    height: 25px;
    margin: 10px 0;
}

.progress-type {
    position: absolute;
    left: 5px;
    font-weight: 500;
    font-size: 1.1rem;
    color: #111111;
}

.progress-bar {
    background: repeating-linear-gradient(135deg, rgba(230, 50, 130, 0.8) 15px, rgb(210, 30, 110, 0.8) 30px);
}

.sr-only {
    color: seagreen;
}


/* Cards --------------------------------------------------------- */

.card {
    max-width: 100%;
    margin-top: 5px;
    margin-bottom: 10px;
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    border: 1px solid #666;
}

.list-group-item {
    font-size: 0.9rem;
    padding: 6px 16px;
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    color: #e2e2e2;
}

li {
    padding: 2px 0;
}

.btn {
    position: relative;
    bottom: 2px;
    margin-left: 10px;
}


/* Cards --------------------------------------------------------- */

.accordion {
    margin-bottom: 20px;
}

.accordion-item {
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    border: none;
}

.accordion-button {
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    color: #e2e2e2;
}

.accordion-button:focus {
    border: none;
    box-shadow: none;
}

.accordion-body {
    padding: 1rem 1.25rem 0.7rem 1.25rem;
    border-top: 1px solid rgb(30, 30, 30);
}

.accordion-button:not(.collapsed) {
    color: #e2e2e2;
}

.fa-html5,
.fa-css3-alt,
.fa-github {
    font-size: 1.2rem;
    margin-left: 5px;
}


/* Form ---------------------------------------------------------- */

.form-label {
    margin: 5px 0 0 0;
}

.form-control {
    padding: 0.25rem 0.5rem;
    background-color: rgba(40, 40, 40, .5);
    color: white;
}

.form-control:focus {
    background-color: rgba(50, 50, 50, .5);
    color: white;
}

.form-select {
    padding: 0.25rem 2.25rem 0.25rem 0.25rem;
    background-color: rgba(20, 20, 20, .5);
}

.footer-text {
    padding: 2px 0;
}

.footer-section {
    text-align: center;
}


/* Scrollbar ----------------------------------------------------- */

::-webkit-scrollbar {
    background: transparent;
    width: 6px;
}

::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(53, 53, 53, 0.733);
    -webkit-box: inset 0 0 6px rgb(81, 160, 153);
}

